# vtessera

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  MAINNET-CHECKLIST.md  README.md  ROADMAP.md  TOKEN-DESIGN.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/devnet-demo/: Cargo.toml
crates/devnet-demo/src/: main.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/node-api/: Cargo.toml
crates/node-api/examples/: gen_offer.rs
crates/node-api/src/: lib.rs
crates/offer/: Cargo.toml
crates/offer/src/: lib.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
crates/vtesserad/: Cargo.toml
crates/vtesserad/src/: config.rs  main.rs  metrics.rs  receipt.rs  spool.rs
docs/: DESIGN.md
packaging/: vtessera.apparmor  vtessera.spec  vtessera.toml.example  vtesserad.service
programs/: Anchor.toml  Cargo.toml
programs/vtessera-escrow/: Anchor.toml  Cargo.toml  README.md
programs/vtessera-escrow/src/: lib.rs
src/: config.rs  main.rs  receipt.rs  sign.rs  spool.rs  submit.rs
