[package]
name = "vtessera-devnet-demo"
description = "End-to-end devnet demonstration of the Vtessera escrow flow"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/douglasdemaio/vtessera"

# Off-chain demo binary, EXCLUDED from the host Cargo workspace
# (see /home/douglas/vtessera/Cargo.toml). Pinning solana-sdk 1.18.x
# drags in an older crypto dep tree (curve25519-dalek 3 / zeroize 1.5)
# that conflicts with the host crates' ed25519-dalek 2 ecosystem;
# carrying a separate Cargo.lock here is cheaper than down-rev'ing the
# host workspace.
[[bin]]
name = "vtessera-devnet-demo"
path = "src/main.rs"

[dependencies]
# Solana SDK pinned to the 1.18 line — matches what's already cached on
# this dev box. Bump together when bumping the on-chain program toolchain.
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }

# Anchor uses borsh 0.10 for IX serialisation on the 0.30 line.
borsh = "0.10"
sha2 = "0.10"

# NOTE: the demo does NOT depend on vtessera-executor or vtessera-settlement
# even though it exercises their semantics. Those crates pull modern crypto
# (ed25519-dalek 2 → zeroize 1.5) that conflicts with solana-sdk 1.18's
# curve25519-dalek 3 → zeroize 1.3. The bits the demo needs (a noop CPU
# executor returning synthetic metering, and `f = clamp(used / agreed, 0, 1)`)
# are inlined below. The host crates remain the authoritative implementations
# everything else in the workspace depends on.
