[package]
name = "vtesserad"
description = "Vtessera v0 metering daemon — signed Ed25519 usage receipts from /proc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vtesserad"
path = "src/main.rs"

[features]
default = []
submit = ["ureq"]

[dependencies]
# Default-build crates. Additions require justification in PR per BUILD.md §1.3.
# Pinned via the workspace so v0's audit surface can't widen accidentally.
serde = { workspace = true }
toml = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# submit feature only
ureq = { workspace = true, optional = true }
