[package]
name = "vtessera-escrow"
description = "Vtessera Module 4 — non-custodial escrow + stablecoin→HNT swap (Anchor program)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/douglasdemaio/vtessera"

# This crate is intentionally EXCLUDED from the host Cargo workspace
# (see /home/douglas/vtessera/Cargo.toml) and instead is a member of
# the Anchor workspace at /home/douglas/vtessera/programs/Cargo.toml.
# Anchor / cargo-build-sbf is the only toolchain that should compile it.

[lib]
crate-type = ["cdylib", "lib"]
name = "vtessera_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# When `include-stub` is enabled, the program also exposes
# `finalize_pro_rata_stub` — the original stablecoin→seller payout used
# for devnet smoke testing. Mainnet builds MUST NOT enable this feature;
# the stub bypasses the Pyth-guarded HNT swap entirely and only exists
# so devnet tests don't need HNT liquidity. See MAINNET-CHECKLIST.md §1.
include-stub = []
default = []

[dependencies]
# Version pin lands when the toolchain is actually wired. Anchor 0.30 is
# the current stable line at time of writing; the program is small enough
# to track new majors without churn.
anchor-lang = "0.30"
anchor-spl = "0.30"
# Pyth pull-oracle SDK. 0.3.2 requires anchor-lang >= 0.28; compatible
# with the Anchor 0.30 line we're on. PriceUpdateV2 accounts let callers
# post fresh Hermes-signed prices before invoking us; we read and verify
# the feed ID + staleness gate.
pyth-solana-receiver-sdk = "0.3.2"
